hid the girl cut from the code and corrected the jump to top in preorder checkout

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 /*Reset CSS*/
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, cite, code, del, dfn, font, img, ins, kbd, q, s, samp, small, strike, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td{margin:0; padding:0; border:0; outline:0; font-weight:normal}
 ul , ol , li { list-style:none; list-style-type:none;}
@@ -923,7 +924,7 @@ cursor: pointer;
     margin-top:5px;
     float:left;
     width:100%;
-    height:140px;
+    height:85px;
 }
 .cart_size_selection .size_selection_header{
     width:100%;
